--- a/q/274951.html
+++ b/q/274951.html
@@ -26,53 +26,50 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1303</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>1252</td><td>sed 4.2.2</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
 <tr d-ix="1"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="2"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="3"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 1303 bytes</h1>
-<pre><code>s/^0$/0/;s/^1$/1/;tg
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>1303</s> 1252 bytes</h1>
+<pre><code>s/^0$/0/;s/^1$/1/;tz
 x;s/^/0001/;x
-:k;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tk;s/0//g
-G;s/(.*)\n(.*)/\2\n\1/;bi
-:;G;s/\n.*\n/\n/;h;s/\n.*//;x
-:i;y/10/ab/;G;s/\n//2
-:c;:h
-tw;:w;s/(.*)\b([ab]{2,})\b( *)\n(#*)/\2\n\3\1\n\4/;Tn
+:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
+G;s/(.*)\n(.*)/\2\n\1/
+:b;y/10/ab/;G;s/\n//2
+:c;s/(.*)\b([ab]{2,})\b( *)\n(#*)/\2\n\3\1\n\4/
 h;s/\n.*//;s/^/\n\n/
-:b;s/\n/#&amp;/
-:a;s/^([&lt;0-9]*)#/\1&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ta
+:d;s/\n/#&amp;/
+:e;s/^([&lt;0-9]*)#/\1&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;te
 s/\n((\[ab]\{\&amp;})*)\n/\n\1[ab]{\&amp;}\n/
 s/(.*)\n(.*)\n(.*)/sed 's%.*%\2%;i\3\\n\1'&lt;&lt;&lt;'\1'/e
-s/(.*)\n(.*)\n(.*)/sed -r 's%^\3$%\&amp;\\n\2%;t;i\2\\n\3\n:'&lt;&lt;&lt;'\1'/e
-T;s/\{[0-9]+}/{\&amp;}/g;tb
-:y;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ty;s/0//g
+s//sed -r 's%^\3$%\&amp;\\n\2%;t;i\2\\n\3\n:'&lt;&lt;&lt;'\1'/e
+T;s/\{[0-9]+}/{\&amp;}/g;td
+:f;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tf;s/0//g
 s/(#+)\1/\1/
-:s;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ts
+:g;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;tg
 s/(.*)\n(.*)/sed -r 's%.{\2}%\&amp;\\n%g;i\2'&lt;&lt;&lt;'\1'/e
-:x;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tx;s/0//g
-s/(#+)/\1\1/
-:d;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;td;
+:h;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;th;s/0//g
+s/#+/&amp;&amp;/
+:i;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ti
 s/([0-9]+)\n(.*)/sed -z 's%\\n%\\n\\n\\n%\1'&lt;&lt;&lt;'\2'/e
 s/.*/sed '2~2d'&lt;&lt;&lt;'&amp;';sed '1~2d'&lt;&lt;&lt;'&amp;'/e
-s/(.)\n/\1/g;y/\n/ /;G
-s/\n[ba]*\n/ /
-/[ab]{2,}/bh
-h;s/\n.*//
-:n;s/.*\n//;s/[ab]/&amp; /g;y/ /\n/
-:f;:e;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;te
+s/(.)\n/\1/g;y/\n/ /;G;s/\n[ba]*\n/ /
+/[ab]{2,}/bc
+h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
+:j;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;tj
 /^\n*a*\n*$/!s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
-s/\n(\n*)/\1/g;/\n/bf
+s/\n(\n*)/\1/g;/\n/bj
 y/a/#/;s/b//;G;s/\n.*\n/ /
-Ta;s/^(#*) \1([01]*)$/\2/;tg;s/#* //
+T;s/^(#*) \1([01]*)$/\2/;tz;s/#* //
 s/^(#*)([01]*)$/\2\n\1/;h;s/\n.*//;T
 s/10(0*)(1*)$/01\2\1/;t
 s/(0*)0(1*)/\21\1/;t
-y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
-:g
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
+:;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
+:z
 </code></pre>
-<p><a href="https://tio.run/##lVRtb5swEP7uX8FEQgJdOJu022Kjft0fyDecSmZJ02garQJSSaPspy97zoSWfpi0IgTn8708z93Z9WZ9bs2Lac813ckRSTIQ1IgUmWYrWl6RlBLLVuifWBZqtlhRFNLWHEhl8@ubL1@/LUj2IgcIJS1CBGB7SbQV3yFM0yS2FX/JZrayCFnuhDa8Z6s0sRV@ZB4uS/IZd5xEkivpYkeUCf3D6AfRPBv93Mctp4UrV8fs84nlwGcK@0xzq/C9JrOsxCA8U4O@IqHLLnYYQXa8MS1yCZ5JHJJVef7KM5TqlnzSOAdkhSRpnCa3SAS@TnCY6dQyGHu00SlmJJxFeXzQcL5hMS4lqTfrYFKP02Rss7HZATM7TfI8n@BHm3/5zPbsdmfno7GN2AfeDfwz64lXehBiySyPBRO7OhGDQRObUujDB/t66PsKUOFVjFbiFbpmE/rvatXvOA3YpEebnTo64y1zGXDQ7Qextu@xAqnHuv4Y1rVh/6507wC/MGAGyvX277hvW9a1DbPmm5v9ztZ@I5oYr1Bvikt//awozwpSgJn3A1WUbpV4haB@zKl8GMyy0JXhTHw@uD4woijwgQLyE35v9AY7pa1KKqmTHDmWHOt6CTqIzUbQna0Sh4jJiD69spjtq2CCvC51zrRGs5Q4G7lfT2YJRb/RDImhXggTd9QYTnkvDsgYehxEwysAHJfdCcTxDdCGQiocw1HXhi13LQmIj5C3GGx3V8rgfC9hpORUwkqxiVQw4nuNaw2tZDUcVafEJHXXH5wjPKzT2/NZCiUyMRfX4ubP41Oze6zq82z/Fw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##lVRNb@IwEL37V2QVEhKzZGxDd5c46nX/ALcYJLtQPqRNK8ghBbE/fdkZp2nDrUgoTMZvZt6bGee4Xl0bfdLN9QhLMQABGg05AAm6PrGG3kAIga8Nyy2@lnI8W0Acwka/gVST6cOPn79mIDqTEoQCZiEmILwA2LDfaCQZT01FTzDKVEYCyx3lEGAdaIKYCkCx/KlDu6S0bnFW3y9kBz4@7OInRuJzCmzrIzMOnjuamIblqzZfGKO9poOkLARS52kIRhbFB/VQyEfwFdMi40ZihSzN@CNWQQlrRmmSxBATczbxJSUaVEV6cuihen197yqP61UwPEYZj4yK9A4JU9CwKIoh/gFl9pjxgWBLMxlEJiYMomvEK@NVVnkvZE6qziUJGV2AiuMc6hXLn@8czXM3GiQejlKchh/IhiDw5e5sbnT31GRnoy6tnGhDWnoa8u2dXLefXMMRxDTR3X08d8Sz7doN1xNxJY7Uav@LugmpdkK4Vn6O6q9a@YN4qL1Dfjo8EAvTWkgvCK2gW@nS2QX3DgbdOoN7ul1bOoA48MEB@AXeo9uZyoGD1rJgybLk6yz0oVnvGSxNxS3W4QP49kF7fKiCIRaymbW60TlZ3JrY/nnVc3R0B3VfCTYI06StFuLi9uwNK4aeB3S6sndRc3@58FoG2PVSSLxhg7brJxoSD4Buh0f0jv0HQPd6MEeQFIlAlCSIkAiirxD1Fr2C3BgoWycuTfuxwuA49jvR54W/fvJGO8fy0/UqmGSKTdiUPfx7ea13L9XxOj78Bw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
 <p>I have finally fixed the shuffling. splitting an arbitrary length string into 4 quadrants of a square is stupidly hard. I will come back and explain more and golf a lot, but this works on any inputs, even 39 and 70 (you just have to wait a few years or something like that...)</p>
 <p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up significantly.</p>
