--- a/q/275009.html
+++ b/q/275009.html
@@ -26,61 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
-<tr d-ix="1"><td>189</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>184</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="1"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
 <tr d-ix="2"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>149</s> 135 bytes</h1>
-<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ≔ＥθＥθυηＦθＦＥθλＦ§θκ«≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ§≔§ηκλε»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«≔⁻§θ§ι⁰ιε¿εＦε⊞ζ⁺⟦κ⟧ι⊞υＥι§§ηκκ»ＵＭυ⌊⟦ι⮌ι⟧ＩＬΦυ⁼κ⌕υι
-</code></pre>
-<p><a href="https://tio.run/##bVJda4MwFH2evyL0KYIDs9c9lbJCYWWyPYoP0qY1GONHkm449tvdvSZp56igOTn3I/ccc6jK4dCWcprWWouzovuyo31CMqurt44PpWkHuhXquJaS7lRnzYcZhDrTOCErtoJvHcOnj5@jZQO/WIxWED21A6F9TObVB2Xs92uzU0f@hRy0I9/Rw59me6GsXqYkJK@hvAAQ@LBWCWnCVCOcGzrlRUI47j8rITnxXUck/RCb1iqDDIREYxvaxBBCIyhfkNemd87G2aQ76Sc4shXS8CGIxskFTv7S21Jq@pSQV67OpqJZ21EBZ/rJ56HGhRv/nQhQJCTFMhF7keJEKPe6uBcByjIJ9XldYCamcam5C1r3x8RdQ2tn6KwJsjZt05TqONd4V3IofOcXPmgOEgpMzeCaGLoptaFen/fBXqWDE3i1kJl1Q9k0pSx1T8RS5nB04xDNbARviM6IOYSAMYduHKLp8SJ/AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as an adjacency matrix. Explanation: Port of an earlier version of @Mukundan314's Python answer.</p>
-<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ
-</code></pre>
-<p>Convert the adjacency matrix into a modified adjacency list where each node is considered to be adjacent to itself.</p>
-<pre><code>≔ＥθＥθυη
-</code></pre>
-<p>Start constructing the list representations (Charcoal doesn't really have tuples) of trees rooted at each node.</p>
-<pre><code>Ｆθ
-</code></pre>
-<p>Repeat enough times to complete all of the representations.</p>
-<pre><code>ＦＥθλＦ§θκ«
-</code></pre>
-<p>Loop through each adjacency pair.</p>
-<pre><code>≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ
-</code></pre>
-<p>Get a list of all of the nodes that are next steps from the current node as seen from the current node, except for the current adjacent node.</p>
-<pre><code>≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ
-</code></pre>
-<p>Sort this list.</p>
-<pre><code>§≔§ηκλε
-</code></pre>
-<p>Save it as the current node as seen from the adjacent node.</p>
-<pre><code>»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«
-</code></pre>
-<p>Start a breadth-first search for backbones with a list of all the leaves as the first element of a backbone.</p>
-<pre><code>≔⁻§θ§ι⁰ιε
-</code></pre>
-<p>Get a list of next nodes for the current node, excluding the previous nodes.</p>
-<pre><code>¿εＦε⊞ζ⁺⟦κ⟧ι
-</code></pre>
-<p>If there are any then for each next node add it to the backbone so far and add the new backbone to the search.</p>
-<pre><code>⊞υＥι§§ηκκ
-</code></pre>
-<p>Otherwise this is a leaf so save the list representation of this backbone.</p>
-<pre><code>»ＵＭυ⌊⟦ι⮌ι⟧
-</code></pre>
-<p>Take the minimum of each backbone and its reverse so that they can be deduplicated.</p>
-<pre><code>ＩＬΦυ⁼κ⌕υι
-</code></pre>
-<p>Deduplicate and count the backbones.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s></sup> 189 bytes</h1>
-<p><em>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
-<em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em></p>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s> <s>189</s></sup> 184 bytes</h1>
+<p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
+<em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
+<em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
 <pre class="lang-python prettyprint-override"><code>lambda g,s=[]:sum([s:=s+[t:=(T:=lambda p,n:(*sorted(T(n,c)for c in g[n]if p^c),))(n,n)],L(t),.5,0][min(3,s.count(t))]for n,c in enumerate(g)if len(c)&lt;2)
-L=lambda t:sum(L(i)for i in{*t})or.5
+L=lambda t:sum(map(L,{*t}))or.5
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZLPatwwEMbJ1U8hfJLS2WXt9f6JqQu5FAp7KCQ3RSnuWuu62LKw5WWb0ifpJRDat-iDNE-TkeTQbElTg0d45vt9M2P7-0_9xXxq1e3dTXb1YzC7yfr3rzpvPhY5KaHPuEj7oaG8T7P-FTdpRi_TbKxrUCk97dvOyIJeUgVbtms7siWVIiVXotoRfb1lwBjWFBOwoYbBdAEzwZtK0Tn00207KINpJiyKFhaWamhklxtJS4YmtVR0y17HLNg8tjZuqg2tXMcKoa-n5htru-nCL3F_cl3IHZFFKfs4Lz7XVW-oe2JpQPBSJCNNfqBNrvE-gJcy5ooIYJlzQaz9BztTl6tSUtzCCWx6ALJ301rQm44sH8iERGKaay1VQff2iR0J9keC4Y-gk2bolNUEgW1SV0raJi0K6WycvVIa5z1ot4Kmcp_X4JTTXteVoSGZvCHhuAuKUXf8IjDni-1gsHjjEy6juwo_CA_fnr_bhEDC9-cXF6HgTpjZpgIsxfxrvr0_MZxHEAvgMcwxziFxcSGEnSIOnisvYIlxCSuXsXEFaw8kzwLWz8blCLzg7aVPOyzR28azlzokDksctnLAGgGPAT-DaObp5X9p3zR54uFod0R4RBFEsTeLZn-5xf9w8xOtHlcYf_IH" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZLPbtQwEMbVa57Cyskus9Em-7cRQeoFCWkPSO3NuCgk3hCUOFbirEoRT8KlUgXPwKvQp2Fsp6KLStnDWJn5ft98TvbbD_3ZfOzU7d1N9u77aPaz7a-fTd5-KHNSwZBxkQ5jS_mQZsMLbtKMXqbZNNegUno6dL2RJb2kCgq273pSkFqRiitR74m-KhgwhjPFBOyoYRCtYC54Wyu6gCEqulEZbDNhUbSwsFRjK_vcSFoxNGmkogV7mbBg97DauFRtrukOvpyar4x1fbTy-e9Prkq5J7Ks5JDk5aemHgx1TywNCP4UyUibXzscT_BSxtwQARxzLogN9N7G6XNVSYoXcALbHoEcXFALetOJ5SOZkVhEudZSlfRgn9iR4HAkGP8IemnGXllNENglTa2kXdKhkM6n7LXSmPdauytoKg95A04ZDbqpDQ3J7BUJp7ugGHXHLwJ7ftiNBoc3vuE6uq_xW_Dw9fmbXQgkfHt-cREK7oSZXSrAUsy_5tv7E8N5DIkAnsAC6wKWrq6EsCmS4KnxCtZY17BxHVs3sPXA8knA-tm6noBnvL308YY1ett69tyGpcOWDts4YIuAx4CfQTz39Pq_tF-6fOThaHfEeMQxxIk3i-d_uSX_cPOJNg9XmP7kvwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 <h2>Explanation</h2>
 <p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
@@ -124,6 +81,50 @@ lambda g, s=[]: sum(
     for n, c in enumerate(g) if len(c) &lt; 2                              # For every leaf node
 )
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>149</s> 135 bytes</h1>
+<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ≔ＥθＥθυηＦθＦＥθλＦ§θκ«≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ§≔§ηκλε»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«≔⁻§θ§ι⁰ιε¿εＦε⊞ζ⁺⟦κ⟧ι⊞υＥι§§ηκκ»ＵＭυ⌊⟦ι⮌ι⟧ＩＬΦυ⁼κ⌕υι
+</code></pre>
+<p><a href="https://tio.run/##bVJda4MwFH2evyL0KYIDs9c9lbJCYWWyPYoP0qY1GONHkm449tvdvSZp56igOTn3I/ccc6jK4dCWcprWWouzovuyo31CMqurt44PpWkHuhXquJaS7lRnzYcZhDrTOCErtoJvHcOnj5@jZQO/WIxWED21A6F9TObVB2Xs92uzU0f@hRy0I9/Rw59me6GsXqYkJK@hvAAQ@LBWCWnCVCOcGzrlRUI47j8rITnxXUck/RCb1iqDDIREYxvaxBBCIyhfkNemd87G2aQ76Sc4shXS8CGIxskFTv7S21Jq@pSQV67OpqJZ21EBZ/rJ56HGhRv/nQhQJCTFMhF7keJEKPe6uBcByjIJ9XldYCamcam5C1r3x8RdQ2tn6KwJsjZt05TqONd4V3IofOcXPmgOEgpMzeCaGLoptaFen/fBXqWDE3i1kJl1Q9k0pSx1T8RS5nB04xDNbARviM6IOYSAMYduHKLp8SJ/AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as an adjacency matrix. Explanation: Port of an earlier version of @Mukundan314's Python answer.</p>
+<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ
+</code></pre>
+<p>Convert the adjacency matrix into a modified adjacency list where each node is considered to be adjacent to itself.</p>
+<pre><code>≔ＥθＥθυη
+</code></pre>
+<p>Start constructing the list representations (Charcoal doesn't really have tuples) of trees rooted at each node.</p>
+<pre><code>Ｆθ
+</code></pre>
+<p>Repeat enough times to complete all of the representations.</p>
+<pre><code>ＦＥθλＦ§θκ«
+</code></pre>
+<p>Loop through each adjacency pair.</p>
+<pre><code>≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ
+</code></pre>
+<p>Get a list of all of the nodes that are next steps from the current node as seen from the current node, except for the current adjacent node.</p>
+<pre><code>≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ
+</code></pre>
+<p>Sort this list.</p>
+<pre><code>§≔§ηκλε
+</code></pre>
+<p>Save it as the current node as seen from the adjacent node.</p>
+<pre><code>»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«
+</code></pre>
+<p>Start a breadth-first search for backbones with a list of all the leaves as the first element of a backbone.</p>
+<pre><code>≔⁻§θ§ι⁰ιε
+</code></pre>
+<p>Get a list of next nodes for the current node, excluding the previous nodes.</p>
+<pre><code>¿εＦε⊞ζ⁺⟦κ⟧ι
+</code></pre>
+<p>If there are any then for each next node add it to the backbone so far and add the new backbone to the search.</p>
+<pre><code>⊞υＥι§§ηκκ
+</code></pre>
+<p>Otherwise this is a leaf so save the list representation of this backbone.</p>
+<pre><code>»ＵＭυ⌊⟦ι⮌ι⟧
+</code></pre>
+<p>Take the minimum of each backbone and its reverse so that they can be deduplicated.</p>
+<pre><code>ＩＬΦυ⁼κ⌕υι
+</code></pre>
+<p>Deduplicate and count the backbones.</p>
 </div>
 <div id="pu2" class="pu"><h1>Python3, 643 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>F=lambda x:{J for K in x for J in K}
