--- a/q/275009.html
+++ b/q/275009.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>181</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>180</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
 <tr d-ix="2"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s> <s>189</s> <s>183</s></sup> 181 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s> <s>189</s> <s>183</s></sup> 180 bytes</h1>
 <p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
 <em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
 <em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
-<pre class="lang-python prettyprint-override"><code>lambda g,s=[]:sum([s:=s+[t:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(c,-1)[0][1:]],L(t),.5,0][min(3,s.count(t))]for c in g if len(c)&lt;2)
+<pre class="lang-python prettyprint-override"><code>lambda g,s=[]:sum([s:=s+[t:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(c,T)[0][1:]],L(t),.5,0][min(3,s.count(t))]for c in g if len(c)&lt;2)
 L=lambda t:sum(map(L,{*t}))or.5
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZLPbpwwEMaVK09hcbI3A1pYlt2gUimKVKnSHiolN8etKLCUCowFZpVmtU-SSy7pG_Rhmqep_5A2W6Uph7E88_2-mbG4-y6-yS8dv3-4RSm6fhjl1lv__NFk7eciQxUMKWXJMLaYDkk6nFKZpPgqSaf6BYgEz4aul2WBr_B-VtGcHby9OEBOtl2PclRzdEGAEJyDFxA6ZzRIGIMNlgT8Jah7W3O8gMHPu5FLlSbsN1mheouakuOcvAmJs3nqK81IbSbwBvYzeSCk6_2lHf7x5GNRblFZVOUQZsXXph4kNjeSOEh9XC3aZjcGVydYKSGmqABVppQhPcQnPUSf8arEnDAj0OkR0E5XDGhNJ5aOyEMB8zMhSl7gnb6RI8HuSDD-EfSlHHuuNY6jmzQ1L3WTTgnxfJq95kLNeyPMCgKXu6wBo_QH0dQSu8h7i9xpFyVWuuOHUDlb7Eapirc2YTKir9X7U_fd-fuNC8j9cH556TJqhKluykBTxD7z_eOJpDSAkAENYaHiAiITl4zpKULnpfISYhVjWJmMjitYWyB6EdB-OsYT8Iq3lT7vECtvHc9e6xAZLDLYygBrBVgM6BkEc0vH_6Vt0-iZh6HNEagjCCAIrVkw_8st_IebnWj1tML0k_8C" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZLPattAEMbJVU-x6LTrjoUly7IjqkIIFAo-FOLbdltUaa2qyKtFWpk0xk-SSy7pE_Rlmqfp_lHauKSpDrPszPf7ZmbR7Xf5TX1pxd39DcrQh_tBbaernz-afPe5zFEFfUZZ2g87TPs0619RlWZ4k2Zj_RJkiid92yle4g0-TCpasOP0II9QkG3boQLVAl0SIAQXsCF0xmiYMgZrrAgEC9D3XS3wHPqgaAehdJqw32CF6i1quMAFeR0Rb_3YVtmJdrnEazhM1JGQtgsWbvaHs48l3yJeVryP8vJrU_cK2xtJPaQ_offc5dcW1yc4KSG2qAFdppQhM8QnM0SXi4pjQZgVmPQAaG8qFnSmI0sHNEUhC3IpuSjx3tzIiWB_Ihj-CDquhk4YjeeZJk0tuGnSaiGejbPXQup5r6VdQWK-zxuwyqCXTa2wj6ZvkD_uosVad_oQOueK7aB08cYlbEZ2tX5_6r-9eLf2AfnvL66ufEatMDNNGRiKuGe-ezhTlIYQMaARzHWcQ2zjgjEzReQ9V15AomMCS5sxcQkrB8TPAsbPxGQEXvB20qcdEu1t4vlLHWKLxRZbWmClAYcBPYdw5ujkv7RrGj_xsLQ9Qn2EIYSRMwtnf7lF_3BzEy0fVxh_8l8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 <h2>Explanation</h2>
 <p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
@@ -75,7 +75,7 @@ lambda g, s=[]: sum(
     s := s + [                                                          # s.append(t)
       t :=                                                              #   t = tuple representation of tree rooted at node
         (T := lambda C, p: (*sorted(T({*g[c]} - {p}, c) for c in C),))  #     recursive function to generate tuple representation for a virtual node with given children
-        (c,-1)                                                          #     called with children of current node
+        (c,T)                                                           #     called with children of current node
         [0][1:]                                                         #     remove original leaf since virtual node is equivalent to original left
     ],                                                                  #
     L(t),                                                               # if s.count(t) == 1: add L(t)
