--- a/q/275009.html
+++ b/q/275009.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>180</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>171</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
 <tr d-ix="2"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s> <s>189</s> <s>183</s></sup> 180 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> ... <s>180</s></sup> 171 bytes</h1>
 <p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
 <em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
 <em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
-<pre class="lang-python prettyprint-override"><code>lambda g,s=[]:sum([s:=s+[t:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(c,T)[0][1:]],L(t),.5,0][min(3,s.count(t))]for c in g if len(c)&lt;2)
+<pre class="lang-python prettyprint-override"><code>lambda g:(s:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(range(len(g)),T),sum(L(t)+.5*(s.count(t)&gt;1)for t in{*s}if len(t)&lt;2))[1]
 L=lambda t:sum(map(L,{*t}))or.5
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZLPattAEMbJVU-x6LTrjoUly7IjqkIIFAo-FOLbdltUaa2qyKtFWpk0xk-SSy7pE_Rlmqfp_lHauKSpDrPszPf7ZmbR7Xf5TX1pxd39DcrQh_tBbaernz-afPe5zFEFfUZZ2g87TPs0619RlWZ4k2Zj_RJkiid92yle4g0-TCpasOP0II9QkG3boQLVAl0SIAQXsCF0xmiYMgZrrAgEC9D3XS3wHPqgaAehdJqw32CF6i1quMAFeR0Rb_3YVtmJdrnEazhM1JGQtgsWbvaHs48l3yJeVryP8vJrU_cK2xtJPaQ_offc5dcW1yc4KSG2qAFdppQhM8QnM0SXi4pjQZgVmPQAaG8qFnSmI0sHNEUhC3IpuSjx3tzIiWB_Ihj-CDquhk4YjeeZJk0tuGnSaiGejbPXQup5r6VdQWK-zxuwyqCXTa2wj6ZvkD_uosVad_oQOueK7aB08cYlbEZ2tX5_6r-9eLf2AfnvL66ufEatMDNNGRiKuGe-ezhTlIYQMaARzHWcQ2zjgjEzReQ9V15AomMCS5sxcQkrB8TPAsbPxGQEXvB20qcdEu1t4vlLHWKLxRZbWmClAYcBPYdw5ujkv7RrGj_xsLQ9Qn2EIYSRMwtnf7lF_3BzEy0fVxh_8l8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZLPattAEMbJVU-x6LSrjI1XkWVH1IEQKBR8KMS3zbao1lpVkVeLtDJpjJ8kl1zSS5-oeZruH4XGJU11mGVnvt83M5Luf6jv-msjHx7v0ALdPPZ6M5r_-lnn2y9FjsoMd9kCr7LFkLgCleGoa1otCrzC-6hka34Y7dUB1mTTtGiNKomuCBCC21yWAtdC4pIQWBHo-i1eYk1Ox9MId-N100ttrhfUkdqQ-6g7VBtkGU3exYQwyoPlc3OdWYdtrvAS9pE-ENK046kf-enkUyE2SBSl6OK8-FZXncbuRrIAmUea9bb5rcPNCV5KiCsawJQZ48hO8tnu4KeXhDuBTfeAdrbiQG86sKxHI0T5OFdKyALv7I0cCXZHgv6PoBW6b6XVBIFtUldS2CaNEeLJMHsllZn3VrkVFBa7vAanHHeqrjQO0egChcMuRmx0xy_C5Hyx6bUp3vmEy6i2Ml-Bhe8vPyxDQOHHy-vrkDMnXNimHCxF_Gt-eDrRjFGIObAYzkw8g8TFKed2ijh4rTyF1MQUZi5j4wzmHkheBayfjekAvOHtpS87pMbbxvO3OiQOSxw2c8DcAB4Ddg504un0v7RvmrzwcLQ7qDkoBRp7Mzr5yy3-h5ufaPa8wvCT_wY" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 <h2>Explanation</h2>
 <p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
