--- a/q/275009.html
+++ b/q/275009.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>171</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>170</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
 <tr d-ix="2"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> ... <s>180</s></sup> 171 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> ... <s>171</s></sup> 170 bytes</h1>
 <p><em>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
 <em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em><br />
 <em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
-<pre class="lang-python prettyprint-override"><code>lambda g:(s:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(range(len(g)),T),sum(L(t)+.5*(s.count(t)&gt;1)for t in{*s}if len(t)&lt;2))[1]
-L=lambda t:sum(map(L,{*t}))or.5
+<pre class="lang-python prettyprint-override"><code>lambda g:(s:=(T:=lambda C,p:(*sorted(T({*g[c]}-{p},c)for c in C),))(range(len(g)),T),sum(L(t)+(s.count(t)&gt;1)for t in{*s}if len(t)&lt;2))[1]/2
+L=lambda t:sum(map(L,{*t}))or 1
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZLPattAEMbJVU-x6LSrjI1XkWVH1IEQKBR8KMS3zbao1lpVkVeLtDJpjJ8kl1zSS5-oeZruH4XGJU11mGVnvt83M5Luf6jv-msjHx7v0ALdPPZ6M5r_-lnn2y9FjsoMd9kCr7LFkLgCleGoa1otCrzC-6hka34Y7dUB1mTTtGiNKomuCBCC21yWAtdC4pIQWBHo-i1eYk1Ox9MId-N100ttrhfUkdqQ-6g7VBtkGU3exYQwyoPlc3OdWYdtrvAS9pE-ENK046kf-enkUyE2SBSl6OK8-FZXncbuRrIAmUea9bb5rcPNCV5KiCsawJQZ48hO8tnu4KeXhDuBTfeAdrbiQG86sKxHI0T5OFdKyALv7I0cCXZHgv6PoBW6b6XVBIFtUldS2CaNEeLJMHsllZn3VrkVFBa7vAanHHeqrjQO0egChcMuRmx0xy_C5Hyx6bUp3vmEy6i2Ml-Bhe8vPyxDQOHHy-vrkDMnXNimHCxF_Gt-eDrRjFGIObAYzkw8g8TFKed2ijh4rTyF1MQUZi5j4wzmHkheBayfjekAvOHtpS87pMbbxvO3OiQOSxw2c8DcAB4Ddg504un0v7RvmrzwcLQ7qDkoBRp7Mzr5yy3-h5ufaPa8wvCT_wY" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZHBbtswDIbRa55C8ElKmSxyHSc1lgJFgQEDchjQ3DRv8GLF8-DIgi0HXYM8yS69dIe9Ufs0oyQXa4au84Gyyf_7Sco_furv5mut7u5vyYJ8vO_MZjR_-FVl2y95RoqEtsmCrpJFn7gCndBhWzdG5nRF98NCrNPDaK8PsGabuiFrUipyxYAx2mSqkLSSihaMwYpB223pkhp2Stvxuu6UwfcL7jCD2H7YHsoNsYBhb0PGBE_fhIPlU2-TWINtpukS9kNzYAxB7id-PPmUyw2ReSHbMMu_VWVrqPtiyYDgo3C7bXbjcDzBSxlzRQSwLERK7Cyf7Qp-eMVSJ7DpDsjOVhzoTXtWdGREeDrOtJYqpzv7xY4EuyNB90fQSNM1ymoGA9ukKpW0TWoU0kk_e6k0znuj3Qqayl1WgVOOW12VhgZkdEGCfhcUo-74IjDni3VnsHjrEy6jmxL_gwjeXb5fBkCCD5fX10EqnHBhm6ZgKeav-e7xxAjBIUxBhHCG8QwiF6dpaqcIBy-VpxBjjGHmMjbOYO6B6EXA-tkY98Ar3l76vEOM3jaev9YhcljksJkD5gh4DMQ58Imn4__Svmn0zMPR7uB4cA489GZ88pdb-A83P9HsaYWpv_3f" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 <h2>Explanation</h2>
 <p>Much of the solution is based on representing the tree as a nested tuple. In this system:</p>
@@ -68,21 +68,21 @@ L=lambda t:sum(map(L,{*t}))or.5
 <h3>Commented Version</h3>
 <pre class="lang-python prettyprint-override"><code># given a tuple representation counts the number of unique paths to leaves,
 # it does this by eliminating duplicate subtrees then counting the number of leaves
-L = lambda t: sum(map(L, {*t})) or .5
+L = lambda t: sum(map(L, {*t})) or 1
 
 lambda g: (
   s :=                            # s = tuple of tuple representations of trees rooted at every node
     (T := lambda C, p: (*sorted(  #   recursive function to generate tuple representations (dfs)
       T({*g[c]} - {p}, c)         #     recursively call T with parent removed from adjacent nodes
       for c in C),)               #     for every child
-    )(range(len(g)), T),          #   magic arguments to get function to generate tuple representation for every node
+    )(range(len(g)), T),          #   generate tuple representation for a virtual node which is connected to every node
   sum(                            #
     L(t)                          # add L(t)
-    + .5 * (s.count(t) &gt; 1)       # add .5 if t occurs more than once in s
+    +  (s.count(t) &gt; 1)           # add 1 if t occurs more than once in s
     for t in {*s}                 # for every unique tuple representation t
     if len(t) &lt; 2                 # which was generated from a leaf node
-  )
-)[1]
+  )                               #
+)[1] / 2                          # divide by 2 to account for double counting
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>149</s> 135 bytes</h1>
